Move slides from slide to slides/, add pdf and video links, and RSS feed (for blog).

--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ FootnoteReturnLinkContents = "↩"
     name = "Slides"
     pre = "<i class='google icon'></i>"
     weight = -90
-    url = "/slide/"
+    url = "/slides/"
 #[[menu.main]]
 #    name = "Documentation"
 #    pre = "<i class='book icon'></i>"
